--- a/Hello_world.html
+++ b/Hello_world.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Change made by Aayan</h1>
+    <h1>Shape Creator</h1>
     <div>
         <select id="selected-shape" title="Select Shape">
             <option value="circle">Circles</option>
